@@ -3,8 +3,6 @@ package com.copyright.rup.dist.foreign.repository.impl.csv.acl;
 import com.copyright.rup.dist.common.repository.impl.csv.BaseCsvReportHandler;
 import com.copyright.rup.dist.foreign.domain.report.UdmSurveyLicenseeReportDto;
 
-import com.google.common.collect.ImmutableList;
-
 import org.apache.commons.lang3.StringUtils;
 
 import java.io.OutputStream;
@@ -24,7 +22,7 @@ import java.util.Objects;
 public class UdmSurveyLicenseeReportHandler extends BaseCsvReportHandler<UdmSurveyLicenseeReportDto> {
 
     private static final List<String> HEADERS =
-        ImmutableList.of("Period", "Channel ", "Usage Origin", "Survey Start Date", "Company ID", "Company Name",
+        List.of("Period", "Channel ", "Usage Origin", "Survey Start Date", "Company ID", "Company Name",
             "Det LC ID", "Det LC Name", "Agg LC", "Agg LC Name", "Total Details", "Usable Details", "% Usable Data",
             "# of registered users", "# of rows reported by registered users",
             "# of usable rows reported by registered users", "% Usable from registered users",
